Revert some metrics changes